--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
     	<groupId>com.basho.riak</groupId>
     	<artifactId>riak-client</artifactId>
-    	<version>2.0.3</version>
+    	<version>2.0.6-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
