--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.basho.riak</groupId>
-  <artifactId>riak-java-benchmark</artifactId>
+  <artifactId>simple-java-benchmark</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>riak-java-benchmark</name>
+  <name>simple-java-benchmark</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -17,11 +17,16 @@
     <dependency>
     	<groupId>com.basho.riak</groupId>
     	<artifactId>riak-client</artifactId>
-    	<version>2.0.6-SNAPSHOT</version>
+    	<version>2.0.6</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.3.1</version>
     </dependency>
   </dependencies>
   <build>
-  	<finalName>riak-java-benchmark</finalName>
+  	<finalName>simple-java-benchmark</finalName>
   	<plugins>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
@@ -29,7 +34,7 @@
   			<configuration>
   				<archive>
   					<manifest>
-  						<mainClass>com.basho.riak.RiakJavaBenchmark</mainClass>
+  						<mainClass>com.basho.riak.SimpleJavaBenchmark</mainClass>
   					</manifest>
   				</archive>
   			</configuration>
@@ -44,7 +49,7 @@
 				</descriptorRefs>
 				<archive>
 					<manifest>
-						<mainClass>com.basho.riak.RiakJavaBenchmark</mainClass>
+						<mainClass>com.basho.riak.SimpleJavaBenchmark</mainClass>
 					</manifest>
 				</archive>
 			</configuration>
