--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>commons-cli</artifactId>
       <version>1.3.1</version>
     </dependency>
+    <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-core</artifactId>
+        <version>3.1.0</version>
+    </dependency>
   </dependencies>
   <build>
   	<finalName>simple-java-benchmark</finalName>
